# clinic-codex

./: .gitignore  ANNOTATIONS.md  EMBEDDING-READINESS.md  INSTALL.md  README.md  patch_workspace.sh
.github/workflows/: smoke.yml
.omc/: notepad.md
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-artifact-policy.txt  task-1-root-inventory.txt  task-10-ci-workflow.txt  task-11-frontend-smoke.txt  (+20 more)
EXISTING_CODE/: README.md  requirements.txt
_legacy/: README.md
backend/: .env.example  README.md  main.py  requirements.txt
codex-frontend/: README.md  eslint.config.js  package-lock.json  package.json
dev-scripts/: README.md  patch.js  patch2.js  patch_workspace.js
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend_integration_fix/frontend_integration/: pyproject.toml
frontend_integration_fix/frontend_integration/codex_model/: classifier.py
frontend_integration_fix/frontend_integration/codex_pipeline/data/: augmentation.py  cached_dataset.py  dataset.py
frontend_integration_fix/frontend_integration/codex_pipeline/inference/: __init__.py
frontend_integration_fix/frontend_integration/codex_pipeline/models/: embedding.py
frontend_integration_fix/frontend_integration/codex_pipeline/scripts/: build_metadata.py  precompute_augmented.py  sam_full_test.py
frontend_integration_fix/frontend_integration/codex_pipeline/segmentation/: __init__.py
scripts/: download-weights.sh  export_annotations.py  install.ps1  install.sh  migrate_annotation_symlinks.py  retrain.sh  run-dev.ps1  run-dev.sh
(+98 files in other folders)
