[project]
name = "frontend-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "flask>=3.1.3",
    "mobile-sam",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "segment-anything>=1.0",
    "timm>=0.9.12",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
mobile-sam = { git = "https://github.com/ChaoningZhang/MobileSAM.git" }
